syntax = "proto3";
package rafay.dev.types.config;

import "protoc-gen-openapiv2/options/annotations.proto";
import "gogoproto/gogo.proto";
import "proto/types/config/config.proto";
import "proto/types/config/placement.proto";
import "proto/types/controller/cluster_controller.proto";
import "proto/types/commonpb/v3/common.proto";

message TemplateOverrides {
  string clusterName = 1;
  sint64 partnerID = 2;
  sint64 organizationID = 3;
  sint64 projectID = 4;
  string v1EdgeID = 5;
  string v1FluentdAggregatorAddr = 6;
  string v1DeploymentEnv = 7;
  string v1InfluxDBFQDN = 8;
  string v1InfluxDBPassword = 9;
  string v1PromethuesRelayFQDN = 10;
  string v1EdgeDisplayName = 11;
  string organizationHash = 12;
  string partnerHash = 13;
  string orgDisplayName = 14;
  string partnerDisplayName = 15;
  string V2EventFrameworkFQDN = 16;
  string proxyURL = 17;
}

// OverrideSpec is the specification of override
message OverrideSpec {
  // an override is only applied if selector matches the taskset/namespace
  // labels
  string resourceSelector = 1
      [ (gogoproto.moretags) = "pg:\"resource_selector\"" ];
  // overrides is list of objects to be overriden
  repeated rafay.dev.types.controller.StepObject overrides = 2 [
    (gogoproto.moretags) = "pg:\"overrides\"",
    (gogoproto.nullable) = false
  ];
  string valuesFile = 3 [ (gogoproto.moretags) = "pg:\"values_file\"" ];
  TemplateOverrides templateOverrides = 4 [
    (gogoproto.moretags) = "pg:\"template_overrides\"",
    (gogoproto.nullable) = false
  ];
  string clusterSelector = 5
      [ (gogoproto.moretags) = "pg:\"cluster_selector\"" ];
  rafay.dev.types.config.PlacementSpec clusterPlacement = 6
      [ (gogoproto.moretags) = "pg:\"cluster_placement\"" ];
  string repositoryRef = 7 [ (gogoproto.moretags) = "pg:\"repository_ref\"" ];
  rafay.dev.types.config.RepoArtifactMeta repoArtifactMeta = 8 [
    (gogoproto.moretags) = "pg:\"repo_artifact_meta\"",
    (gogoproto.nullable) = false
  ];
}

// Override is a list of objects that can be used to patch namespace/taskset
// at partner/org/project/cluster level
// override type should be sepecificed as a label rafay.dev/overrideType
// applicable values are partner/organization/project/cluster
message Override {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema : {
      title : "Override"
      description : "Override"
      required : [ "apiVersion", "kind", "metadata", "spec" ]
    }
  };
  string apiVersion = 1
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
          title : "API Version",
          description : "API Version of the resource"
          default : "config.k8smgmt.io/v3"
          read_only : true
      } ];
  string kind = 2
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
          title : "Kind",
          description : "Kind of the resource"
          default : "Cluster"
          read_only : true
      } ];
  rafay.dev.types.common.v3.Metadata metadata = 3
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
          title : "Metadata",
          description : "Metadata of the resource"
      } ];
  OverrideSpec spec = 4
      [ (gogoproto.nullable) = false, (gogoproto.embed) = true ];
  rafay.dev.types.common.v3.Status status = 5
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        title : "Status",
        description : "Status of the resource"
        read_only : true
      } ];
}

// OverrideList is a list of overrides
message OverrideList {
  string apiVersion = 1
        [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            title : "API Version",
            description : "API Version of the list resource"
            default : "config.k8smgmt.io/v3"
            read_only : true
        } ];
  string kind = 2
        [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            title : "Kind",
            description : "Kind of the list resource"
            default : "ClusterList"
            read_only : true
        } ];
  rafay.dev.types.common.v3.ListMetadata metadata = 3
        [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            title : "ListMetadata",
            description : "Metadata of the list resource"
            read_only : true
        } ];
  repeated Override items = 4;
}

message ClusterOverride {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema : {
      title : "ClusterOverride"
      description : "ClusterOverride"
      required : [ "apiVersion", "kind", "metadata", "spec" ]
    }
  };
  string apiVersion = 1
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
          title : "API Version",
          description : "API Version of the resource"
          default : "config.k8smgmt.io/v3"
          read_only : true
      } ];
  string kind = 2
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
          title : "Kind",
          description : "Kind of the resource"
          default : "Cluster"
          read_only : true
      } ];
  rafay.dev.types.common.v3.Metadata metadata = 3
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
          title : "Metadata",
          description : "Metadata of the resource"
      } ];
  ClusterOverrideSpec spec = 4
      [ (gogoproto.nullable) = false, (gogoproto.embed) = true ];
  rafay.dev.types.common.v3.Status status = 5
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        title : "Status",
        description : "Status of the resource"
        read_only : true
      } ];
}

// OverrideSpec is the specification of override
message ClusterOverrideSpec {
  string clusterSelector = 1;
  string resourceSelector = 2;
  ClusterOverrideType type = 3;
  string overrideValues = 4;
  rafay.dev.types.config.PlacementSpec clusterPlacement = 5;
  string repositoryRef = 6;
  rafay.dev.types.config.RepoArtifactMeta repoArtifactMeta = 7;
}

enum ClusterOverrideType {
  // disable enum prefix
  option (gogoproto.goproto_enum_prefix) = false;

  ClusterOverrideTypeUnknown = 0;
  ClusterOverrideTypeWorkload = 1;
  ClusterOverrideTypeAddon = 2;
  ClusterOverrideTypeNamespace = 3;
  ClusterOverrideTypeBlueprint = 4;
}

// OverrideList is a list of overrides
message ClusterOverrideList {
  string apiVersion = 1
        [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            title : "API Version",
            description : "API Version of the list resource"
            default : "config.k8smgmt.io/v3"
            read_only : true
        } ];
  string kind = 2
        [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            title : "Kind",
            description : "Kind of the list resource"
            default : "ClusterOverrideList"
            read_only : true
        } ];
  rafay.dev.types.common.v3.ListMetadata metadata = 3
        [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            title : "ListMetadata",
            description : "Metadata of the list resource"
            read_only : true
        } ];
  repeated ClusterOverride items = 4;
}